--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-yaml": "^3.5.2",
     "lodash": "^4.2.0",
     "q": "^1.4.1",
-    "q-io": "^1.13.1"
+    "q-io": "^1.13.1",
+    "yargs": "^3.32.0"
   }
 }
